feat: pongo mensaje si no hay movimientos en la lista

--- a/balance/static/css/styles.css
+++ b/balance/static/css/styles.css
@@ -47,6 +47,10 @@ table.paper {
     margin: 0;
 }
 
+.lista_vacia {
+    text-align: center;
+    color: var(--primary-color);
+}
 
 table.paper .titulo-tabla {
     border-bottom: solid thin var(--secundary-color);
