--- a/balance/templates/base.html
+++ b/balance/templates/base.html
@@ -10,6 +10,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/static/css/flat-remix.css">
     <link rel="stylesheet" href="/static/css/styles.css">
+    <script type="text/javascript" src="/static/js/balance.js"></script>
 </head>
 
 <body>
