FIX: Arreglo el problema que existía al guardar en base de datos con el campo "to_quantity"

--- a/balance/templates/compra.html
+++ b/balance/templates/compra.html
@@ -44,10 +44,10 @@
         </div>
         <div class="cantidad-item">
             <label for="">Cantidad:</label>
-            <input type="text" name="to_quantity" id="quantity" disabled>
+            <input type="text" name="to_quantity" id="quantity" readonly>
             <div>
                 <label for="">P.U.:</label>
-                <input type="text" id="unitPrice" disabled>
+                <input type="text" id="unitPrice" readonly>
                 <div>
                     <button type="submit"><i class="fa-solid fa-check"></i></button>
                 </div>
