--- a/balance/templates/compra.html
+++ b/balance/templates/compra.html
@@ -38,7 +38,7 @@
         <div class="cantidad-item">
             <label for="">Valor a invertir:</label>
             <input type="text" name="from_quantity" id="value-to-convert">
-            <input type="hidden" id="value-to-convert-hidden" />
+            <input type="hidden" name="value_to_convert_hidden" id="value-to-convert-hidden" />
             <i class="fa-solid fa-calculator cursor-p" onclick="loadCurrencies()"></i>
             <!-- TODO: Acuérdate del valueToConvert -->
         </div>
