--- a/balance/templates/estado.html
+++ b/balance/templates/estado.html
@@ -1,17 +1,20 @@
 {% extends "base.html" %}
 
 {% block head_title%}
-{{ super() }}: Inicio
+{{ super() }}: Estado
 {% endblock head_title %}
 
 {% block contenido %}
 
 <h1>ESTADO DE LA INVERSION</h1>
+
 <div class="estado">
+    {% for d in data %}
     <label for="inv">Total invertido:</label>
-    <input type="text" name="inv" id="inv">
+    <input type="text" name="inv" id="inv" value="{{ d.CantidadOrigen }}">
     <label for="valor">Valor actual:</label>
     <input type="text" name="valor" id="valor">
+    {% endfor %}
 </div>
 
 <a href="/"><button type="nuevo"><i class="fa-solid fa-arrow-left-long"></i></button></a>
