--- a/balance/templates/base.html
+++ b/balance/templates/base.html
@@ -20,12 +20,12 @@
     <main>
         {% with errors = get_flashed_messages(category_filter=["error"]) %}
         {% if errors %}
-        <div class="messages messages-ko">
+        <div class="messages messages-ko fade-in-out">
             <i class="fa-solid fa-circle-xmark fa-2xl" style="color: #c31d1d;"></i>
 
             <div class="messages-flash">
                 {% for error in errors %}
-                <p>{{ error }}</p>
+                {{ error }}
                 {% endfor %}
             </div>
         </div>
@@ -34,12 +34,12 @@
 
         {% with messages = get_flashed_messages(category_filter=["message"]) %}
         {% if messages %}
-        <div class="messages messages-ok">
+        <div class="messages messages-ok fade-in-out">
             <i class="fa-solid fa-circle-check fa-2xl" style="color: #1dc339;"></i>
 
             <div class="messages-flash">
                 {% for message in messages %}
-                <p>{{ message }}</p>
+                {{ message }}
                 {% endfor %}
             </div>
         </div>
