--- a/balance/templates/compra.html
+++ b/balance/templates/compra.html
@@ -12,13 +12,18 @@
     <div class="selects">
         <div class="selects-item">
             <label for="">Moneda-origen:</label>
+
             <select name="from_currency" id="currency-from">
+                {% if movements %}
                 <option value="EUR">Euro</option>
                 <option value="BTC">Bitcoin</option>
                 <option value="ETH">Ethereum</option>
                 <option value="ADA">Cardano</option>
                 <option value="SOL">Solana</option>
                 <option value="DOT">Polkadot</option>
+                {% else %}
+                <option value="EUR">Euro</option>
+                {% endif %}
             </select>
         </div>
         <div class="selects-item">
@@ -35,12 +40,12 @@
     </div>
 
     <div class="cantidad">
+
         <div class="cantidad-item">
             <label for="">Valor a invertir:</label>
-            <input type="text" name="from_quantity" id="value-to-convert">
+            <input type="text" name="from_quantity" id="value-to-convert" required>
             <input type="hidden" name="value_to_convert_hidden" id="value-to-convert-hidden" />
             <i class="fa-solid fa-calculator cursor-p" onclick="loadCurrencies()"></i>
-            <!-- TODO: Acuérdate del valueToConvert -->
         </div>
         <div class="cantidad-item">
             <label for="">Cantidad:</label>
